@@ -14,7 +14,7 @@ is_both ["\x02"], 'startOfText', 'startOfText';
 is_both ["\x03"], 'endOfText', 'endOfText';
 is_both ["\x04"], 'endOfTransmission', 'endOfTransmission';
 is_both ["\x05"], 'enquiryChar', 'enquiryChar';
-is_both ["\x06"], 'acknowledge', 'acknowledge';
+is_both ["\x06"], 'ack', 'ack';
 is_both ["\x07"], 'bellChar', 'bellChar';
 is_both ["\x08"], 'backspace', 'backspace';
 is_both ["\x09"], 'tabChar', 'tabChar';
@@ -29,7 +29,7 @@ is_both ["\x11"], 'deviceControl1', 'deviceControl1';
 is_both ["\x12"], 'deviceControl2', 'deviceControl2';
 is_both ["\x13"], 'deviceControl3', 'deviceControl3';
 is_both ["\x14"], 'deviceControl4', 'deviceControl4';
-is_both ["\x15"], 'negativeAcknowledge', 'negativeAcknowledge';
+is_both ["\x15"], 'negativeAck', 'negativeAck';
 is_both ["\x16"], 'synchronousIdle', 'synchronousIdle';
 is_both ["\x17"], 'endOfTransmissionBlock', 'endOfTransmissionBlock';
 is_both ["\x18"], 'cancelChar', 'cancelChar';
@@ -145,7 +145,7 @@ is_both ["\x02", '_'], 'start_of_text', 'start_of_text';
 is_both ["\x03", '_'], 'end_of_text', 'end_of_text';
 is_both ["\x04", '_'], 'end_of_transmission', 'end_of_transmission';
 is_both ["\x05", '_'], 'enquiry_char', 'enquiry_char';
-is_both ["\x06", '_'], 'acknowledge', 'acknowledge';
+is_both ["\x06", '_'], 'ack', 'ack';
 is_both ["\x07", '_'], 'bell_char', 'bell_char';
 is_both ["\x08", '_'], 'backspace', 'backspace';
 is_both ["\x09", '_'], 'tab_char', 'tab_char';
@@ -160,7 +160,7 @@ is_both ["\x11", '_'], 'device_control1', 'device_control1';
 is_both ["\x12", '_'], 'device_control2', 'device_control2';
 is_both ["\x13", '_'], 'device_control3', 'device_control3';
 is_both ["\x14", '_'], 'device_control4', 'device_control4';
-is_both ["\x15", '_'], 'negative_acknowledge', 'negative_acknowledge';
+is_both ["\x15", '_'], 'negative_ack', 'negative_ack';
 is_both ["\x16", '_'], 'synchronous_idle', 'synchronous_idle';
 is_both ["\x17", '_'], 'end_of_transmission_block', 'end_of_transmission_block';
 is_both ["\x18", '_'], 'cancel_char', 'cancel_char';
@@ -276,7 +276,7 @@ is_both ["\x02\x02", '_'], '2_starts_of_text', 'plural start_of_text';
 is_both ["\x03\x03", '_'], '2_ends_of_text', 'plural end_of_text';
 is_both ["\x04\x04", '_'], '2_ends_of_transmission', 'plural end_of_transmission';
 is_both ["\x05\x05", '_'], '2_enquiry_chars', 'plural enquiry_char';
-is_both ["\x06\x06", '_'], '2_acknowledges', 'plural acknowledge';
+is_both ["\x06\x06", '_'], '2_acks', 'plural ack';
 is_both ["\x07\x07", '_'], '2_bell_chars', 'plural bell_char';
 is_both ["\x08\x08", '_'], '2_backspaces', 'plural backspace';
 is_both ["\x09\x09", '_'], '2_tab_chars', 'plural tab_char';
@@ -291,7 +291,7 @@ is_both ["\x11\x11", '_'], '2_device_control1s', 'plural device_control1';
 is_both ["\x12\x12", '_'], '2_device_control2s', 'plural device_control2';
 is_both ["\x13\x13", '_'], '2_device_control3s', 'plural device_control3';
 is_both ["\x14\x14", '_'], '2_device_control4s', 'plural device_control4';
-is_both ["\x15\x15", '_'], '2_negative_acknowledges', 'plural negative_acknowledge';
+is_both ["\x15\x15", '_'], '2_negative_acks', 'plural negative_ack';
 is_both ["\x16\x16", '_'], '2_synchronous_idles', 'plural synchronous_idle';
 is_both ["\x17\x17", '_'], '2_ends_of_transmission_block', 'plural end_of_transmission_block';
 is_both ["\x18\x18", '_'], '2_cancel_chars', 'plural cancel_char';
