@@ -1,5 +1,8 @@
 Revision history for String-ToIdentifier-EN
 
+    - update for Lingua::EN::Inflect::Phrase 0.14
+    - change ascii 'acknowledge' to 'ack'
+
 0.07  2012-02-27 22:31:06
     - work around a bug in [:upper:] in 5.15.8
 
